fix: overlay text clipping

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -248,7 +248,11 @@
   }
 
   .overlayText2 h4 {
-    font-size: 2.5rem;
+    font-size: 2rem;
+  }
+
+  .bookNowButton {
+    top: calc(100vh - 50px);
   }
 
   .navContainer {
@@ -264,6 +268,12 @@
   }
 }
 
+@media (max-width: 620px) {
+  .bookNowButton {
+    top: calc(100vh - 150px);
+  }
+}
+
 @media (max-width: 480px) {
   .overlayText h1 {
     font-size: 4rem;
@@ -274,7 +284,17 @@
   }
 
   .overlayText2 h4 {
-    font-size: 2rem;
+    font-size: 1.5rem;
+  }
+
+  .bookNowButton {
+    top: calc(100vh - 110px);
+  }
+}
+
+@media (max-width: 350px) {
+  .bookNowButton {
+    left: calc(100vw - 150px);
   }
 }
 
